fixed wrong color on text bug

--- a/flask_app/testmap/static/stylemap.css
+++ b/flask_app/testmap/static/stylemap.css
@@ -119,7 +119,7 @@ a:link {
     color: brown;
   }
   a:visited {
-    color: white;
+    color: black;
   }
 .button-set{
     display: flex;
